# VulnLoc-docker

./: setup.Dockerfile  setup.sh
code/: fuzz.py
code/iftracer/ifLineTracer/: CMakeLists.txt  findline.cpp
code/iftracer/iftracer/: CMakeLists.txt  acbrtrace.c
test/setup-cve_2016_5314/: test.sh
